@@ -1,9 +1,5 @@
 AUX 001-duplicati-bin-2.0.4.5_beta20181128-bash-path.patch 1046 BLAKE2B da4e78ccaa255b53043d28f582b715b92dbf5c2e31b06776d874fcd924fae8c3e4fbef3d0ab5135719e6a80677f1f59050acc73c13121a070d32e9665dcfb052 SHA512 fdf21ee4f7247d6a6a1ad086ecd4ed5829c940c97fb5d0deba512612727743f11329cae29c45ee19711022ed402e5933ea8068d13eb04cdc65aa495a9115cdb4
-DIST duplicati-bin-2.0.2.1_beta20170801.rpm 7447686 BLAKE2B b3053638de7390ee35162a6cb184c323c908b7e9b1f3ee7f8556c93e10836740245c6b667c6ca8ea2674c2ca3303859992acded80a6db98750f8425f8b5d9e4d SHA512 372603b8e48111e430403421ac8c611932534e5343564abf4c9ebf297b002de83d771cda4544c59a78d6faf3b794882265a75c669f19f17f2c6fb91fa64e16b5
-DIST duplicati-bin-2.0.3.3_beta20180402.rpm 7721946 BLAKE2B f69418f750fe7ad0011043db2e6a7463d9be8ea099837cc3d16e144eb626fed90a22cec4fb3767796cdde13583943106f528c1c27883a2f2a56ff62c45312ab9 SHA512 79cb885700246aeffb3167f06500073c153a470dfe62938ef3f5a3dd608de4882f8b437bf34541500a68b24cb64938da224cdb6f3205ab53fe2a5b9a90367201
 DIST duplicati-bin-2.0.4.5_beta20181128.rpm 7973320 BLAKE2B 01488719d6e5b18a5b3a3b76499b52d63038cb818b3629989edd7b354b9b86927328eab978d3ab7cd7fe284b4cf720bb2f311c85709819a5eff33b7e44ed94e9 SHA512 63c6a66895844238f5b2b3b045f9efdb91308c26c57a50905ab3180bfa3e304467b29dfd2d03a6142b852f228740e25787978a30950f01c8ce738e0ed4510fa5
-EBUILD duplicati-bin-2.0.2.1_beta20170801-r1.ebuild 810 BLAKE2B b6d87ebe3dfc774cc96c68f8aab6252a555e12a53ab397810e8f5220b9839a2619f177f76949a6035e1e12997f8d5a59287ff452612661d89f461c72a0ac534a SHA512 63d09f04a6929601455df4c2d09ee016d06f9bac14ec348613d96e3102e6caa507b2d63d8eb8cff95acff861221e338cec4c0ed3ab79d11a3c616556cf3d1a3f
-EBUILD duplicati-bin-2.0.3.3_beta20180402.ebuild 810 BLAKE2B 5236fca39a06fd731d880228553390a22d1c8542404e0b3ca66f87399d1a996127a412d630964a6f27278a4be53c8350ade260d56c98755451d110d2853035be SHA512 6219b17de7b683961e1db84f9f050518d8170b30c84ef6bf71d350ce2f479c333ff981d074597088acd935fd299c433693eb57c8597e34b9f41c1c4e5402cf96
 EBUILD duplicati-bin-2.0.4.5_beta20181128.ebuild 972 BLAKE2B d9665244672579ca14ccaef9c811012d9c4d08bc2129fc2ae2a8b9fd34c3d2a719a1c3cb38b050077ed4a3c6ddb8ff82d34c948230a0db25f75458ef8504cfe4 SHA512 c2848374c351871bdc566d1827e727dc7131c9965a40f30a589f0a2bfa548b81fd11fda42f7eb824a16443ef45f907c0f852b36253e5fb0c568db9b86c01732e
-MISC ChangeLog 1565 BLAKE2B 0711f44122c81ad72b43dad7ed1542abf50f91956ad1d9a48501e35763c54e0f4d2608259e17357bea259c644bf80b48204b06828f116d6f005141cf64356a81 SHA512 1264afae475526c99b440927ec11e947e4bfa70f2516d998c9bd20e3b390d70960cdee925cee14da7ee071956db543ec37e596ba64b1aa9c2d800a6ea43a4908
+MISC ChangeLog 1760 BLAKE2B 85001c1d2dfb8a472ef1bdc243d15153e42c891796daea079822cdc49fe1a33beb194e589052a5171ef345175bf02f00af7531d8badf741d31cf3675da29650f SHA512 844b9ccf915f9587506089f605fc163c0c4dad9479de5166105efbe8bc66515264f6f3dc1e3ac05ae618e164d8ff5838a918eff6f29f1a27af9f13a7292cc4f7
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
